--- a/resources/fxml/carDetails.fxml
+++ b/resources/fxml/carDetails.fxml
@@ -3,14 +3,16 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="490.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.CarDetailsController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="0.0" prefWidth="132.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="161.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="145.0" minWidth="10.0" prefWidth="102.0" />
   </columnConstraints>
   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -26,36 +28,41 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Brend:" />
-      <Label text="Model:" GridPane.rowIndex="1" />
-      <Label text="Vrsta:" GridPane.rowIndex="2" />
-      <Label text="Godište:" GridPane.rowIndex="3" />
-      <Label text="Gorivo:" GridPane.rowIndex="4" />
-      <Label text="Potrošnja goriva:" GridPane.rowIndex="5" />
-      <Label text="Broj sjedišta:" GridPane.rowIndex="6" />
-      <Label text="Broj vrata:" GridPane.rowIndex="7" />
-      <Label text="Mjenjač:" GridPane.rowIndex="8" />
-      <Label text="Boja:" GridPane.rowIndex="9" />
-      <Label text="Dostupnost:" GridPane.rowIndex="11" />
-      <TextField fx:id="fldBrand" GridPane.columnIndex="1" />
-      <TextField fx:id="fldModel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <TextField fx:id="fldType" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <TextField fx:id="fldYear" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField fx:id="fldTransmission" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <TextField fx:id="fldFuelConsumption" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <TextField fx:id="fldNmbSeats" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <TextField fx:id="fldNmbDoors" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <TextField fx:id="fldEngine" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-      <TextField fx:id="fldColor" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-      <TextField fx:id="fldAvailability" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-      <Label text="Cijena po danu:" GridPane.rowIndex="10" />
-      <TextField fx:id="fldPrice" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="12">
+      <Label text="Brend:" GridPane.rowIndex="1" />
+      <Label text="Model:" GridPane.rowIndex="2" />
+      <Label text="Vrsta:" GridPane.rowIndex="3" />
+      <Label text="Godište:" GridPane.rowIndex="4" />
+      <Label text="Gorivo:" GridPane.rowIndex="5" />
+      <Label text="Potrošnja goriva:" GridPane.rowIndex="6" />
+      <Label text="Broj sjedišta:" GridPane.rowIndex="7" />
+      <Label text="Broj vrata:" GridPane.rowIndex="8" />
+      <Label text="Mjenjač:" GridPane.rowIndex="9" />
+      <Label text="Boja:" GridPane.rowIndex="10" />
+      <Label text="Dostupnost:" GridPane.rowIndex="12" />
+      <Label fx:id="lblBrand" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label fx:id="lblModel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label fx:id="lblType" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label fx:id="lblYear" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label fx:id="lblTransmission" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <Label fx:id="lblFuelConsumption" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+      <Label fx:id="lblNmbSeats" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Label fx:id="lblNmbDoors" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <Label fx:id="lblEngine" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+      <Label fx:id="lblColor" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+      <Label fx:id="lblAvailability" GridPane.columnIndex="1" GridPane.rowIndex="12" />
+      <Label text="Cijena po danu:" GridPane.rowIndex="11" />
+      <Label fx:id="lblPrice" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="13">
         <buttons>
           <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationAction" text="Rezerviši" />
             <Button fx:id="btnBack" mnemonicParsing="false" onAction="#backAction" text="Nazad" />
         </buttons>
       </ButtonBar>
+      <Label fx:id="lblName" GridPane.columnSpan="2">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
