--- a/resources/fxml/reservation.fxml
+++ b/resources/fxml/reservation.fxml
@@ -5,21 +5,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:controller="sample.ReservationController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="596.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="383.0" prefWidth="649.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="119.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="10.0" prefWidth="139.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="0.0" prefWidth="20.0" />
-      <ColumnConstraints maxWidth="178.0" minWidth="87.0" prefWidth="178.0" />
-      <ColumnConstraints maxWidth="191.0" minWidth="105.0" prefWidth="139.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="0.0" prefWidth="31.0" />
+      <ColumnConstraints maxWidth="178.0" minWidth="52.0" prefWidth="76.0" />
+      <ColumnConstraints maxWidth="178.0" minWidth="61.0" prefWidth="95.0" />
+      <ColumnConstraints maxWidth="191.0" minWidth="0.0" prefWidth="73.0" />
+      <ColumnConstraints maxWidth="191.0" minWidth="19.0" prefWidth="115.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="95.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="50.0" />
-      <RowConstraints maxHeight="-Infinity" minHeight="14.0" prefHeight="50.0" />
-      <RowConstraints maxHeight="-Infinity" minHeight="14.0" prefHeight="50.0" />
+      <RowConstraints maxHeight="50.0" minHeight="14.0" prefHeight="50.0" />
+      <RowConstraints maxHeight="50.0" minHeight="14.0" prefHeight="50.0" />
       <RowConstraints maxHeight="35.0" minHeight="30.0" prefHeight="31.0" />
   </rowConstraints>
    <children>
@@ -28,10 +30,10 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label text="Datum preuzimanja vozila:" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-      <Label text="Datum vraćanja vozila:" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-      <DatePicker fx:id="datePickup" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-      <DatePicker fx:id="dateReturn" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+      <Label text="Datum preuzimanja vozila:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <Label text="Datum vraćanja vozila:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <DatePicker fx:id="datePickup" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+      <DatePicker fx:id="dateReturn" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <Label text="Ime i prezime:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       <TextField fx:id="fldName" prefHeight="25.0" prefWidth="154.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label text="Adresa:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
@@ -41,11 +43,11 @@
       <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <Label text="Email adresa:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
       <Label text="Podaci o Vama" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-      <Label text="Podaci o rezervaciji" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-      <Label text="Način plaćanja:" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
-      <CheckBox fx:id="checkBoxNow" mnemonicParsing="false" text="Sada" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-      <CheckBox fx:id="checkBoxShop" mnemonicParsing="false" text="Na licu mjesta" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="6">
+      <Label text="Podaci o rezervaciji" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+      <Label text="Plaćanje:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <CheckBox fx:id="checkBoxNow" mnemonicParsing="false" text="Sada" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+      <CheckBox fx:id="checkBoxShop" mnemonicParsing="false" text="Na licu mjesta" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6">
         <buttons>
           <Button fx:id="btnReservationConfirm" mnemonicParsing="false" onAction="#reservationConfirmAction" text="OK" />
         </buttons>
@@ -54,6 +56,10 @@
          <padding>
             <Insets left="10.0" />
          </padding></Separator>
+      <ChoiceBox prefHeight="25.0" prefWidth="64.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+      <ChoiceBox prefHeight="25.0" prefWidth="64.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+      <ChoiceBox prefWidth="64.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+      <ChoiceBox prefWidth="64.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
