--- a/resources/fxml/reservation.fxml
+++ b/resources/fxml/reservation.fxml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.collections.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="383.0" prefWidth="649.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="418.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <stylesheets>
+        <URL value="@/css/rentacar.css" />
+    </stylesheets>
+    <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="119.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="10.0" prefWidth="139.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="0.0" prefWidth="31.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="0.0" prefWidth="20.0" />
       <ColumnConstraints maxWidth="178.0" minWidth="52.0" prefWidth="76.0" />
       <ColumnConstraints maxWidth="178.0" minWidth="61.0" prefWidth="95.0" />
       <ColumnConstraints maxWidth="191.0" minWidth="0.0" prefWidth="73.0" />
-      <ColumnConstraints maxWidth="191.0" minWidth="19.0" prefWidth="115.0" />
+      <ColumnConstraints maxWidth="191.0" minWidth="19.0" prefWidth="89.0" />
+      <ColumnConstraints maxWidth="70.0" minWidth="0.0" prefWidth="20.0" />
+      <ColumnConstraints maxWidth="160.0" minWidth="0.0" prefWidth="83.0" />
+      <ColumnConstraints maxWidth="151.0" minWidth="10.0" prefWidth="139.0" />
+      <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="95.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
@@ -22,7 +32,7 @@
       <RowConstraints maxHeight="-Infinity" minHeight="30.0" prefHeight="50.0" />
       <RowConstraints maxHeight="50.0" minHeight="14.0" prefHeight="50.0" />
       <RowConstraints maxHeight="50.0" minHeight="14.0" prefHeight="50.0" />
-      <RowConstraints maxHeight="35.0" minHeight="30.0" prefHeight="31.0" />
+      <RowConstraints maxHeight="50.0" minHeight="14.0" prefHeight="50.0" />
   </rowConstraints>
    <children>
       <Label text="Rezervacija">
@@ -30,36 +40,130 @@
             <Font size="22.0" />
          </font>
       </Label>
+       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="0" />
       <Label text="Datum preuzimanja vozila:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2" />
       <Label text="Datum vraćanja vozila:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="2" />
       <DatePicker fx:id="datePickup" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <DatePicker fx:id="dateReturn" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <Label text="Ime i prezime:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
       <TextField fx:id="fldName" prefHeight="25.0" prefWidth="154.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Label text="Adresa:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+      <Label text="Adresa:" GridPane.rowIndex="3" />
       <TextField fx:id="fldAddress" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label text="Kontakt telefon:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+      <Label text="Kontakt telefon:" GridPane.rowIndex="4" />
       <TextField fx:id="fldTelephone" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label text="Email adresa:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+      <Label text="Email adresa:" GridPane.rowIndex="5" />
       <Label text="Podaci o Vama" GridPane.columnIndex="0" GridPane.rowIndex="1" />
       <Label text="Podaci o rezervaciji" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-      <Label text="Plaćanje:" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <CheckBox fx:id="checkBoxNow" mnemonicParsing="false" text="Sada" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-      <CheckBox fx:id="checkBoxShop" mnemonicParsing="false" text="Na licu mjesta" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6">
-        <buttons>
-          <Button fx:id="btnReservationConfirm" mnemonicParsing="false" onAction="#reservationConfirmAction" text="OK" />
-        </buttons>
-      </ButtonBar>
-      <Separator orientation="VERTICAL" prefHeight="116.0" prefWidth="6.0" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="5">
+      <Label text="Plaćanje:" GridPane.columnIndex="8" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <CheckBox fx:id="checkBoxNow" mnemonicParsing="false" onAction="#changePayingAction" text="Sada" GridPane.columnIndex="9" GridPane.rowIndex="2" />
+       <Label fx:id="lblNmbCard" text="Broj kartice:" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+       <TextField fx:id="fldNmbCard" GridPane.columnIndex="9" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+       <Label fx:id="lblExpireDate" text="Datum isteka:" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+       <DatePicker fx:id="dateExpire" GridPane.columnIndex="9" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+       <Label fx:id="lblCode" text="CVC:" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+       <TextField fx:id="fldCode" GridPane.columnIndex="9" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <Separator orientation="VERTICAL" prefHeight="210.0" prefWidth="20.0" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="6">
          <padding>
             <Insets left="10.0" />
          </padding></Separator>
-      <ChoiceBox prefHeight="25.0" prefWidth="64.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-      <ChoiceBox prefHeight="25.0" prefWidth="64.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-      <ChoiceBox prefWidth="64.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-      <ChoiceBox prefWidth="64.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+      <ChoiceBox fx:id="choicePickupHour" prefHeight="25.0" prefWidth="64.0" value="10" GridPane.columnIndex="3" GridPane.rowIndex="4">
+       <items>
+           <FXCollections fx:factory="observableArrayList">
+               <String fx:value="00" />
+               <String fx:value="01" />
+               <String fx:value="02" />
+               <String fx:value="03" />
+               <String fx:value="04" />
+               <String fx:value="05" />
+               <String fx:value="06" />
+               <String fx:value="07" />
+               <String fx:value="08" />
+               <String fx:value="09" />
+               <String fx:value="10" />
+               <String fx:value="11" />
+               <String fx:value="12" />
+               <String fx:value="13" />
+               <String fx:value="14" />
+               <String fx:value="15" />
+               <String fx:value="16" />
+               <String fx:value="17" />
+               <String fx:value="18" />
+               <String fx:value="19" />
+               <String fx:value="20" />
+               <String fx:value="21" />
+               <String fx:value="22" />
+               <String fx:value="23" />
+           </FXCollections>
+       </items>
+      </ChoiceBox>
+      <ChoiceBox fx:id="choicePickupMinute" prefHeight="25.0" prefWidth="64.0" value="00" GridPane.columnIndex="4" GridPane.rowIndex="4">
+       <items>
+           <FXCollections fx:factory="observableArrayList">
+               <String fx:value="00" />
+               <String fx:value="15" />
+               <String fx:value="30" />
+               <String fx:value="45" />
+           </FXCollections>
+       </items>
+      </ChoiceBox>
+      <ChoiceBox fx:id="choiceReturnHour" prefWidth="64.0" value="10" GridPane.columnIndex="5" GridPane.rowIndex="4">
+       <items>
+           <FXCollections fx:factory="observableArrayList">
+               <String fx:value="00" />
+               <String fx:value="01" />
+               <String fx:value="02" />
+               <String fx:value="03" />
+               <String fx:value="04" />
+               <String fx:value="05" />
+               <String fx:value="06" />
+               <String fx:value="07" />
+               <String fx:value="08" />
+               <String fx:value="09" />
+               <String fx:value="10" />
+               <String fx:value="11" />
+               <String fx:value="12" />
+               <String fx:value="13" />
+               <String fx:value="14" />
+               <String fx:value="15" />
+               <String fx:value="16" />
+               <String fx:value="17" />
+               <String fx:value="18" />
+               <String fx:value="19" />
+               <String fx:value="20" />
+               <String fx:value="21" />
+               <String fx:value="22" />
+               <String fx:value="23" />
+           </FXCollections>
+       </items>
+      </ChoiceBox>
+      <ChoiceBox fx:id="choiceReturnMinute" prefWidth="64.0" value="00" GridPane.columnIndex="6" GridPane.rowIndex="4">
+       <items>
+           <FXCollections fx:factory="observableArrayList">
+               <String fx:value="00" />
+               <String fx:value="15" />
+               <String fx:value="30" />
+               <String fx:value="45" />
+           </FXCollections>
+       </items>
+      </ChoiceBox>
+      <Label fx:id="lblCardData" text="Podaci o načinu plaćanja:" GridPane.columnIndex="8" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+      <Separator orientation="VERTICAL" prefHeight="200.0" prefWidth="23.0" GridPane.columnIndex="7" GridPane.rowIndex="1" GridPane.rowSpan="6">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Separator>
+      <ButtonBar GridPane.columnIndex="9">
+         <buttons>
+       <Button fx:id="btnBack" mnemonicParsing="false" onAction="#backAction" text="Nazad" />
+         </buttons>
+      </ButtonBar>
+      <ButtonBar GridPane.columnIndex="9" GridPane.rowIndex="6">
+         <buttons>
+          <Button fx:id="btnReservationConfirm" mnemonicParsing="false" onAction="#reservationConfirmAction" prefHeight="25.0" prefWidth="60.0" text="OK" />
+         </buttons>
+      </ButtonBar>
+      <Label fx:id="lblTotalPrice" text="*UKUPNA CIJENA JE " GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
